fix broken layout

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ nav {
   grid-gap: 2.5rem;
   text-align: center;
   padding: 10px 30px 25px 30px;
-  height: 100%;
+  height: 96%;
   border: solid;
   border-top-color: #dde0dd;
   border-left-color: #dde0dd;
@@ -181,7 +181,6 @@ nav {
 #footer {
   grid-area: footer;
   width:100%;
-  position: absolute;
   bottom: 0;
   background-color: #c0c0c0;
   height: 20%;
